--- a/public/elements/results/results-panel.html
+++ b/public/elements/results/results-panel.html
@@ -30,9 +30,9 @@
       <div id="package">
         <h3 class="page-header" >
           <div class="layout horizontal">
-            <div class="flex">
+            <div class="flex animated">
               <i class="fa fa-info-circle"></i>
-              <span itemprop="name">{{result.ecosis.package_title}}</span>
+              <span itemprop="name">{{result.ecosis.package_title}}</span> <small>Dataset Information</small>
             </div>
             <div>
               <small><a id="dsLink" target="_blank"><i class="fa fa-globe"></i> Dataset Link</a> |
@@ -114,7 +114,7 @@
 
 
       <div id="chart" style="display:none">
-        <h3 class="page-header" ><i class="fa fa-area-chart"></i> <span>{{result.ecosis.package_title}}</span> - Data Viewer</h3>
+        <h3 class="page-header" ><i class="fa fa-area-chart"></i> <span>{{result.ecosis.package_title}}</span> <small>Data Viewer</small></h3>
         <spectra-viewer
           id="viewer"
           package="{{result.ecosis.package_id}}"
@@ -123,7 +123,7 @@
       </div>
 
       <div id="download" style="display:none">
-        <h3 class="page-header" ><i class="fa fa-download"></i> <span>{{result.ecosis.package_title}}</span> - Download CSV</h3>
+        <h3 class="page-header" ><i class="fa fa-download"></i> <span>{{result.ecosis.package_title}}</span> <small>Download CSV</small></h3>
         <div id="downloaderRoot" class="well">
           <data-downloader package="{{result.ecosis.package_id}}"></data-downloader>
 
