fix for schema access

--- a/public/elements/results/results-panel.html
+++ b/public/elements/results/results-panel.html
@@ -445,10 +445,10 @@
 
       wrapFilterLinks : function(key, values, icon) {
         if( !values ) {
-          return 'Not Provided';
+          return '<span style="color:#888">Not Provided</span>';
         }
         if( values.length === 0 ) {
-          return 'Not Provided';
+          return '<span style="color:#888">Not Provided</span>';
         }
 
         var links = [];
