--- a/public/elements/results/results-panel.html
+++ b/public/elements/results/results-panel.html
@@ -387,7 +387,7 @@
       },
 
       renderKeywords : function() {
-        if( this.result.Keywords ) {
+        if( this.result.Keywords && this.result.Keywords.length > 0 ) {
           this.$.keywords.innerHTML = this.wrapFilterLinks('Keywords', this.result.Keywords, 'hashtag');
         } else {
           this.$.keywords.innerHTML = '';
