--- a/index.html
+++ b/index.html
@@ -228,12 +228,11 @@ var restUrl = 'https://ecosis.org?text=&filter='+query+'&start=0&stop=6';</code>
 
 <h4>Get Dataset: Example</h4>
 
-<pre><code>curl https://ecosis.org/package/get?_id=[dataset ID here]</code></pre>
+<pre><code>curl https://ecosis.org/package/get?id=[dataset ID here]</code></pre>
 
 <h4>Get Dataset: Response</h4>
 
 <p>The get dataset response is the same response object returned in the items array of the find query: <a href="#find-dataset-response">Dataset Search Response</a>.</p>
-
 
 
 
