fix for webcomponents prerender

--- a/public/elements/results/results-panel.html
+++ b/public/elements/results/results-panel.html
@@ -149,6 +149,16 @@
           this.render(result);
         }.bind(this));
       },
+      
+      attached : function() {
+        if( window.prerender ) {
+          $.get('/package/get',{id : qs('result')}, function(data) {
+              this.parentNode.style.display = 'block';
+              this.render(data);
+            }.bind(this)
+          );
+        }
+      },
 
       setPanel : function(panel) {
         if( typeof panel === 'object' ) {
