--- a/public/require.html
+++ b/public/require.html
@@ -19,6 +19,7 @@
 <script type="text/javascript" src="js/lib.js"></script>
 
 <link rel="import" href="bower_components/polymer/polymer.html">
+<link rel="import" href="bower_components/iron-image/iron-image.html">
 
 <link rel="import" href="elements/layout.html">
 <link rel="import" href="elements/results/results-panel.html">
