fix for home page filter links

--- a/public/elements/home-stats.html
+++ b/public/elements/home-stats.html
@@ -136,7 +136,7 @@
       },
 
       createFilterLink : function(key, value) {
-        return '<a href="#/"'+this.createFilter(key, value)+'>'+value+'</a>';
+        return '<a href="'+this.createFilter(key, value)+'">'+value+'</a>';
       },
 
       createFilter : function(key, value) {
