fix for issue #47

--- a/public/elements/results/results-panel.html
+++ b/public/elements/results/results-panel.html
@@ -295,12 +295,7 @@
                 '<td style="text-align:right"><help-popover description="EcoSIS assigned DOI"></help-popover></td>'
               '</tr>';
           } else {
-            table +=
-              '<tr>'+
-                '<td class="elabel">'+item.name+'</td>'+
-                '<td>'+this.wrapFilterLinks(item.name, this.result[item.name])+'</td>'+
-                '<td style="text-align:right">'+(item.description ? '<help-popover description="'+item.description+'"></help-popover>' : '')+'</td>'
-              '</tr>';
+            table += this.defaultRowRender(item);
           }
           
         }.bind(this));
@@ -310,12 +305,7 @@
       renderSpecies : function() {
         var table = '<table class="table">';
         LIB.schema.Species.forEach(function(item){
-          table +=
-              '<tr>'+
-                '<td class="elabel">'+item.name+'</td>'+
-                '<td>'+this.wrapFilterLinks(item.name, this.result[item.name])+'</td>'+
-                '<td style="text-align:right">'+(item.description ? '<help-popover description="'+item.description+'"></help-popover>' : '')+'</td>'
-              '</tr>';
+          table += this.defaultRowRender(item);
         }.bind(this));
         this.$.species.innerHTML = table+'</table>';
       },
@@ -325,12 +315,7 @@
         LIB.schema.Theme.forEach(function(item){
           if( item.name === 'Keywords' ) return;
 
-          table +=
-              '<tr>'+
-                '<td class="elabel">'+item.name+'</td>'+
-                '<td>'+this.wrapFilterLinks(item.name, this.result[item.name])+'</td>'+
-                '<td style="text-align:right">'+(item.description ? '<help-popover description="'+item.description+'"></help-popover>' : '')+'</td>'
-              '</tr>';
+          table += this.defaultRowRender(item);
         }.bind(this));
         this.$.theme.innerHTML = table+'</table>';
       },
@@ -338,12 +323,7 @@
       renderProcessingInformation : function() {
         var table = '<table class="table">';
         LIB.schema['Processing Information'].forEach(function(item){
-          table +=
-              '<tr>'+
-                '<td class="elabel">'+item.name+'</td>'+
-                '<td>'+this.wrapFilterLinks(item.name, this.result[item.name])+'</td>'+
-                '<td style="text-align:right">'+(item.description ? '<help-popover description="'+item.description+'"></help-popover>' : '')+'</td>'
-              '</tr>';
+          table += this.defaultRowRender(item);
         }.bind(this));
         this.$.processingInformation.innerHTML = table+'</table>';
       },
@@ -351,12 +331,7 @@
       renderInsturment : function() {
         var table = '<table class="table">';
         LIB.schema.Instrument.forEach(function(item){
-          table +=
-              '<tr>'+
-                '<td class="elabel">'+item.name+'</td>'+
-                '<td>'+this.wrapFilterLinks(item.name, this.result[item.name])+'</td>'+
-                '<td style="text-align:right">'+(item.description ? '<help-popover description="'+item.description+'"></help-popover>' : '')+'</td>'
-              '</tr>';
+          table += this.defaultRowRender(item);
         }.bind(this));
         this.$.instrument.innerHTML = table+'</table>';
       },
@@ -364,12 +339,7 @@
       renderMeasurements : function() {
         var table = '<table class="table">';
         LIB.schema.Measurement.forEach(function(item){
-          table +=
-              '<tr>'+
-                '<td class="elabel">'+item.name+'</td>'+
-                '<td>'+this.wrapFilterLinks(item.name, this.result[item.name])+'</td>'+
-                '<td style="text-align:right">'+(item.description ? '<help-popover description="'+item.description+'"></help-popover>' : '')+'</td>'
-              '</tr>';
+          table += this.defaultRowRender(item);
         }.bind(this));
         this.$.measurements.innerHTML = table+'</table>';
       },
@@ -409,6 +379,26 @@
         } else {
           this.$.orgMembers.innerHTML = '';
         }
+      },
+
+      defaultRowRender : function(schemaItem) {
+          var row = 
+            '<tr>'+
+              '<td class="elabel">'+schemaItem.name+'</td>'+
+              '<td>'+this.wrapFilterLinks(schemaItem.name, this.result[schemaItem.name])+'</td>'+
+              '<td style="text-align:right">'+(schemaItem.description ? '<help-popover description="'+schemaItem.description+'"></help-popover>' : '')+'</td>' +
+            '</tr>';
+          
+          if( schemaItem.allowOther && this.result[schemaItem.name+' Other'] ) {
+            row +=
+              '<tr>'+
+                '<td class="elabel">'+schemaItem.name+' Other</td>'+
+                '<td>'+this.wrapFilterLinks(schemaItem.name+' Other', this.result[schemaItem.name+' Other'])+'</td>'+
+                '<td></td>' +
+              '</tr>';
+          }
+
+          return row;
       },
 
       setLinks : function() {
